# trustgraph-holochain

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE  README.md  README.next.md  default-arm64.nix  default.nix  flake.nix  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: main.yml
doc/: pull_request_template.md
doc/onboarding/: PreppingForMerge_GitCLI.md
nix/: sources.json
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
zomes/agent/: Cargo.toml
zomes/agent/src/: agent.rs  init.rs  lib.rs
zomes/hc_zome_trust_atom/: Cargo.toml
zomes/hc_zome_trust_atom/coordination/src/: test_helpers.rs  trust_atom.rs
zomes/hc_zome_trust_atom/integrity/: Cargo.toml
zomes/hc_zome_trust_atom/src/: agents.rs  lib.rs  test_helpers.rs  trust_atom.rs  trust_graph.rs  utils.rs
zomes/hc_zome_trust_atom/tests/: behavior.rs  trust_atom_tests.rs
zomes/hc_zome_trust_graph/: Cargo.toml
zomes/hc_zome_trust_graph/src/: lib.rs  tg_test_helpers.rs  trust_graph.rs
zomes/hc_zome_trust_graph/tests/: trust_graph_tests.rs
zomes/trust_atom/: Cargo.toml
zomes/trust_atom/coordination/: Cargo.toml
zomes/trust_atom/coordination/src/: lib.rs  test_helpers.rs  trust_atom.rs
zomes/trust_atom/coordination/tests/: trust_atom_tests.rs
zomes/trust_atom/integrity/: Cargo.toml
zomes/trust_atom/integrity/src/: entries.rs  lib.rs
zomes/trust_atom/src/: lib.rs  test_helpers.rs  trust_atom.rs
zomes/trust_atom/tests/: Cargo.toml  trust_atom_tests.rs
zomes/trust_atom/tests/src/: lib.rs  trust_atom_tests.rs
zomes/trust_atom_integrity/: Cargo.toml
zomes/trust_atom_integrity/src/: entries.rs  headers.rs  lib.rs  validation.rs
zomes/trust_atom_types/: Cargo.toml
zomes/trust_atom_types/src/: lib.rs
