[workspace]
resolver = "2" # 2 is the default in 2021 edition
members = [
  "zomes/trust_atom",
  "zomes/trust_atom_integrity",
]

[profile.dev]
opt-level = "z"
split-debuginfo = "unpacked" # see https://endler.dev/2020/rust-compile-times/#faster-incremental-debug-builds-on-macos

[profile.release]
opt-level = "z"
incremental = true # see https://nnethercote.github.io/perf-book/compile-times.html#incremental-compilation
