[package]
name = "hc_zome_trust_atom"
description = "Holochain implementation of TrustAtom format from TrustGraph"
version = "0.0.8"
authors = ["harlantwood", "code@harlantwood.net"]
edition = "2021"
rust-version = "1.56.0"                                                      # this requires rust >= 1.56, required to enable 2021 edition

[lib]
name = "hc_zome_trust_atom"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "=0.0.131"
holo_hash = { version = "*", features = ["encoding"] }
rust_decimal = "1"
serde = "1"

[dev-dependencies]
holochain = { version = "=0.0.136", default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
