[package]
name = "hc_zome_trust_graph"
version = "0.0.5"
edition = "2021"

[lib]
name = "hc_zome_trust_atom"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "=0.0.116"
holo_hash = {version = "*", features = ["encoding"]}
rust_decimal = "1"
serde = "1"
hc_zome_trust_atom = { path = "../hc_zome_trust_atom" }

[dev-dependencies]
holochain = { version = "=0.0.119", default-features = false, features = ["test_utils"] }
tokio = {version = "1.3", features = ["full"]}
futures = { version = "0.3.1", default-features = false }