[package]
name = "trust_atom"
description = "Holochain implementation of TrustAtom format from TrustGraph"
version = "0.1.2-dev"
authors = ["harlantwood", "code@harlantwood.net"]
edition = "2021"
rust-version = "1.56.0" # require rust >= 1.56, required to enable 2021 edition

[lib]
name = "trust_atom"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "=0.2.8"
rust_decimal = "1"
serde = "1"
trust_atom_types = { path = "../trust_atom_types" }
trust_atom_integrity = { path = "../trust_atom_integrity" }

[dev-dependencies]
holochain = { version = "=0.2.8", default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
