[package]
name = "hc_zome_tg_coordination"
version = "0.0.10-dev"
edition = "2021"
rust-version = "1.56.0"

[lib]
# name = "hc_zome_tg_coordination"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "=0.0.139"
holo_hash = { version = "=0.0.29", features = ["encoding"] }
rust_decimal = "1"
serde = "1"
derive_more = "0"

[dev-dependencies]
holochain = { version = "=0.0.145", default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
trust_atom_integrity = { path = "../integrity" }