[package]
name = "trust_atom_tests"
version = "0.0.10-dev"
edition = "2021"
rust-version = "1.56.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "=0.0.139"
holo_hash = { version = "=0.0.29", features = ["encoding"] }
hdi = "0.0.14"
rust_decimal = "1"
serde = "1"
derive_more = "0"
hc_zome_tg_coordination = { path = "../../coordination" }
hc_zome_tg_integrity = { path = "../../integrity" }

[dev-dependencies]
holochain = { version = "=0.0.145", default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
futures = { version = "0.3.1", default-features = false }
