[package]
name = "trust_atom_tests"
version = "0.0.10-dev"
edition = "2021"
rust-version = "1.56.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0"
futures = { version = "0.3.1", default-features = false }
hc_zome_tg_coordination = { path = "../coordination" }
hc_zome_tg_integrity = { path = "../integrity" }
hdi = "0.1.2"
hdk = "=0.0.152"
holo_hash = { version = "=0.0.32", features = ["encoding"] }
holochain = { version = "=0.0.162", default-features = false, features = [ "test_utils", ] }
rust_decimal = "1"
serde = "1"
tokio = { version = "1.3", features = ["full"] }
